syntax = "proto3";

package larec;

option go_package = "/apiv1";


service KeyService {
    rpc AddUserKeys(AddUserKeysRequest) returns (AddUserKeysResponse);
    rpc GetUserPublicKey(GetUserPublicKeyRequest) returns (GetUserPublicKeyResponse);
    rpc GetUserProtectedKeys(GetUserProtectedKeysRequest) returns (GetUserProtectedKeysResponse);

    rpc GetProtectedVaultKey(GetProtectedVaultKeyRequest) returns (GetProtectedVaultKeyResponse);
}



message AddUserKeysRequest {
    bytes public_key = 1;
    bytes private_key_protected = 2;
    bytes master_key_hash = 3;
}

message AddUserKeysResponse {}


message GetUserPublicKeyRequest {
    string user_id = 1;
}

message GetUserPublicKeyResponse {
    bytes public_key = 1;
}

message GetUserProtectedKeysRequest {}

message GetUserProtectedKeysResponse {
    bytes private_key_protected = 1;
    bytes master_key_hash = 2;
}

message GetProtectedVaultKeyRequest {
    string vault_id = 1;
}

message GetProtectedVaultKeyResponse {
    bytes vault_key_protected = 1;
}
